The project completed

--- a/Zookeeper with Java/Print an image of the animal/task-info.yaml
+++ b/Zookeeper with Java/Print an image of the animal/task-info.yaml
@@ -74,5 +74,8 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/projects/229/stages/1148/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Wed, 07 Feb 2024 13:23:19 UTC"
+record: 2
