--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -7,16 +7,16 @@ update_date: "Thu, 01 Jan 1970 00:00:00 UTC"
 stages:
   - id: 1147
     step: 17788
-    is_completed: false
+    is_completed: true
   - id: 1148
     step: 17789
-    is_completed: false
+    is_completed: true
   - id: 1149
     step: 17790
-    is_completed: false
+    is_completed: true
   - id: 1150
     step: 17791
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Introduction to Java
