--- a/Zookeeper with Java/Print first lines of code/task-info.yaml
+++ b/Zookeeper with Java/Print first lines of code/task-info.yaml
@@ -40,5 +40,8 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/projects/229/stages/1147/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Wed, 07 Feb 2024 13:09:23 UTC"
+record: 1
